relocate pages and source files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Electron application counting lost time",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron ./src/main/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mweingae",
